--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,8 @@
       <div class="grid-2 contact-layout">
         <div class="card">
           <h2>Get in Touch</h2>
-          <p><strong>Email:</strong> your.email@example.com</p>
+          <p><strong>Email:</strong> ajaykumarjaganathan@gmail.com</p>
+          <p><strong>LinkedIn:</strong>www.linkedin.com/in/ajaykumar-j<p>
           <p><strong>Location:</strong> India</p>
           <p>
             I'm open to opportunities in AI, web development, and IoT/robotics.
@@ -71,3 +72,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
