--- a/index.html
+++ b/index.html
@@ -35,14 +35,16 @@
           <a href="contact.html" class="btn ghost">Contact Me</a>
         </div>
       </div>
+
+      <!-- Updated Hero Card with Image -->
       <div class="hero-card">
-        <!-- Replace with your photo if you want -->
-        <div class="avatar-placeholder">Your Photo</div>
+        <img src="images/profile.jpg" alt="Ajay Kumar" class="profile-photo">
         <p class="hero-card-text">
           B.Tech – Artificial Intelligence & Data Science<br>
           Focus: ML, Web Development, Data Warehousing, IoT.
         </p>
       </div>
+
     </div>
   </section>
 
