Fix hero card image path in index.html
Updated the hero card image path to the correct location.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </div>
       </div>
 
-      <!-- Updated Hero Card with Image -->
+      <!-- Updated Hero Card with Correct Image Path -->
       <div class="hero-card">
-        <img src="images/profile.jpg" alt="Ajay Kumar" class="profile-photo">
+        <img src="profile.jpg" alt="Ajay Kumar" class="profile-photo">
         <p class="hero-card-text">
           B.Tech – Artificial Intelligence & Data Science<br>
           Focus: ML, Web Development, Data Warehousing, IoT.
