--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
       <h2 class="section-subtitle-head">IoT & Robotics</h2>
       <div class="grid-2 project-grid">
         <div class="card project-card">
-          <h3>Smart Rover Robot</h3>
+          <h3>Smart Rover Robot (Projects in Progress) </h3>
           <p>
             Built a rover using <strong>Raspberry Pi Model B</strong> and <strong>ESP32</strong>, capable
             of remote control and integration with recognition systems for attendance tracking.
@@ -113,3 +113,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
