--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
 
         <div class="project-highlight card">
-          <h3>Smart Rover Robot</h3>
+          <h3>Smart Rover Robot  (Projects in Progress) </h3>
           <p>Raspberry Pi + ESP32 based smart rover capable of face recognition / ID-card attendance integration, suitable for smart campus automation.</p>
           <a href="projects.html" class="link">View details →</a>
         </div>
@@ -101,3 +101,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
