--- a/resume.html
+++ b/resume.html
@@ -41,17 +41,17 @@
         <ul class="two-column-list">
           <li>Python, PHP, JavaScript</li>
           <li>ML, Data Science, Streamlit</li>
-          <li>MySQL, SQL, Data Warehouse</li>
+          <li>SQL</li>
           <li>HTML, CSS, Bootstrap</li>
-          <li>Raspberry Pi, ESP32, IoT</li>
+          <li>Raspberry Pi, ESP32, IoT - Beginner level</li>
         </ul>
 
         <h3>Key Projects</h3>
         <ul>
-          <li>Telecom Churn Prediction – Streamlit + XGBoost</li>
-          <li>Hotel Booking System with Admin Panel (PHP + MySQL)</li>
-          <li>Smart Rover Robot (Raspberry Pi + ESP32)</li>
-          <li>CSV-based Login & Contact Form Email System</li>
+          <li>Using machine learning Telecom Churn Prediction – Streamlit + XGBoost</li>
+          <li>Hotel Booking System with Admin Panel (PHP + MySQL) - internship project </li>
+          <li>Smart Rover Robot (Raspberry Pi + ESP32) - Projects in Progress </li>
+         
         </ul>
       </div>
 
@@ -74,3 +74,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
