Change location in contact.html
Updated location from 'India' to 'Vellore' in contact section.

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
           <h2>Get in Touch</h2>
           <p><strong>Email:</strong> ajaykumarjaganathan@gmail.com</p>
           <p><strong>LinkedIn:</strong> www.linkedin.com/in/ajaykumar-j</p>
-          <p><strong>Location:</strong> India</p>
+          <p><strong>Location:</strong> Vellore</p>
           <p>
             I'm open to opportunities in AI, web development, and IoT/robotics.
           </p>
@@ -81,3 +81,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
