--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             <li><strong>Degree:</strong> B.Tech – AI & Data Science</li>
             <li><strong>Location:</strong> India</li>
             <li><strong>Interests:</strong> ML, Web Development, IoT, Robotics</li>
-            <li><strong>Looking for:</strong> Internships & real-world projects</li>
+            <li><strong>Looking for:</strong> Internships & Jobs </li>
           </ul>
         </div>
       </div>
@@ -99,3 +99,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
