--- a/resume.html
+++ b/resume.html
@@ -38,24 +38,49 @@
         </ul>
 
         <h3>Technical Skills</h3>
+
+        <strong>Programming Languages</strong>
         <ul class="two-column-list">
-          <li>Python, PHP, JavaScript</li>
-          <li>ML, Data Science, Streamlit</li>
+          <li>Python</li>
+          <li>PHP</li>
+          <li>JavaScript</li>
+        </ul>
+
+        <strong>AI & Data Technologies</strong>
+        <ul class="two-column-list">
+          <li>Machine Learning</li>
+          <li>Data Science</li>
+          <li>Streamlit</li>
+        </ul>
+
+        <strong>Web Technologies</strong>
+        <ul class="two-column-list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Bootstrap</li>
+        </ul>
+
+        <strong>Databases</strong>
+        <ul>
           <li>SQL</li>
-          <li>HTML, CSS, Bootstrap</li>
-          <li>Raspberry Pi, ESP32, IoT - Beginner level</li>
+        </ul>
+
+        <strong>Hardware & IoT</strong>
+        <ul class="two-column-list">
+          <li>Raspberry Pi</li>
+          <li>ESP32</li>
+          <li>IoT (Beginner Level)</li>
         </ul>
 
         <h3>Key Projects</h3>
         <ul>
-          <li>Using machine learning Telecom Churn Prediction – Streamlit + XGBoost</li>
-          <li>Hotel Booking System with Admin Panel (PHP + MySQL) - internship project </li>
-          <li>Smart Rover Robot (Raspberry Pi + ESP32) - Projects in Progress </li>
-         
+          <li>Telecom Churn Prediction using Machine Learning – Streamlit + XGBoost</li>
+          <li>Hotel Booking System with Admin Panel (PHP + MySQL) – Internship Project</li>
+          <li>Smart Rover Robot (Raspberry Pi + ESP32) – Project in Progress</li>
         </ul>
       </div>
 
-      <!-- Replace # with your actual PDF link (e.g., Google Drive) -->
+      <!-- Replace # with your actual PDF link -->
       <div class="center">
         <a href="#" class="btn primary" target="_blank">
           Download Full Resume (PDF)
@@ -74,4 +99,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
