--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,7 @@
         A selection of my work across AI, web development, data warehousing, and IoT.
       </p>
 
+      <!-- AI & DATA SCIENCE -->
       <h2 class="section-subtitle-head">AI & Data Science</h2>
       <div class="grid-2 project-grid">
         <div class="card project-card">
@@ -37,10 +38,10 @@
             <strong>Streamlit</strong> web app. Includes data cleaning, feature engineering, and visual insights.
           </p>
           <p class="project-tags">Python • XGBoost • Streamlit • Data Visualization</p>
-          <!-- <a href="#" class="link">View on GitHub →</a> -->
         </div>
+      </div>
 
-
+      <!-- WEB DEVELOPMENT -->
       <h2 class="section-subtitle-head">Web Development</h2>
       <div class="grid-2 project-grid">
         <div class="card project-card">
@@ -71,10 +72,11 @@
         </div>
       </div>
 
+      <!-- IOT & ROBOTICS -->
       <h2 class="section-subtitle-head">IoT & Robotics</h2>
       <div class="grid-2 project-grid">
         <div class="card project-card">
-          <h3>Smart Rover Robot (Projects in Progress) </h3>
+          <h3>Smart Rover Robot (Project in Progress)</h3>
           <p>
             Built a rover using <strong>Raspberry Pi Model B</strong> and <strong>ESP32</strong>, capable
             of remote control and integration with recognition systems for attendance tracking.
@@ -91,6 +93,7 @@
           <p class="project-tags">Computer Vision • Automation • Attendance</p>
         </div>
       </div>
+
     </div>
   </section>
 </main>
@@ -104,5 +107,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
