--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <header class="site-header">
   <div class="container nav-container">
     <div class="logo">AJAY<span>.</span></div>
@@ -23,74 +24,81 @@
 <main>
   <section class="section fade-in">
     <div class="container">
+
       <h1 class="section-title">Projects</h1>
       <p class="section-subtitle">
         A selection of my work across AI, web development, data warehousing, and IoT.
       </p>
 
-      <!-- AI & DATA SCIENCE -->
-      <h2 class="section-subtitle-head">AI & Data Science</h2>
-      <div class="grid-2 project-grid">
-        <div class="card project-card">
-          <h3>Telecom Customer Churn Prediction</h3>
-          <p>
-            Built a churn prediction model using <strong>XGBoost</strong> and deployed it as an interactive
-            <strong>Streamlit</strong> web app. Includes data cleaning, feature engineering, and visual insights.
-          </p>
-          <p class="project-tags">Python • XGBoost • Streamlit • Data Visualization</p>
+      <!-- ================= AI & DATA SCIENCE ================= -->
+      <div class="project-section">
+        <h2 class="section-subtitle-head">AI & Data Science</h2>
+        <div class="grid-2 project-grid">
+          <div class="card project-card">
+            <h3>Telecom Customer Churn Prediction</h3>
+            <p>
+              Built a churn prediction model using <strong>XGBoost</strong> and deployed it as an interactive
+              <strong>Streamlit</strong> web app. Includes data cleaning, feature engineering, and visual insights.
+            </p>
+            <p class="project-tags">Python • XGBoost • Streamlit • Data Visualization</p>
+          </div>
         </div>
       </div>
 
-      <!-- WEB DEVELOPMENT -->
-      <h2 class="section-subtitle-head">Web Development</h2>
-      <div class="grid-2 project-grid">
-        <div class="card project-card">
-          <h3>Hotel Booking System</h3>
-          <p>
-            A hotel booking website with an admin panel for managing rooms, bookings, customers,
-            coupons, revenue cards, and payment logs using <strong>PHP</strong> and <strong>MySQL</strong>.
-          </p>
-          <p class="project-tags">PHP • MySQL • Admin Dashboard • CRUD</p>
-        </div>
+      <!-- ================= WEB DEVELOPMENT ================= -->
+      <div class="project-section">
+        <h2 class="section-subtitle-head">Web Development</h2>
+        <div class="grid-2 project-grid">
+          <div class="card project-card">
+            <h3>Hotel Booking System</h3>
+            <p>
+              A hotel booking website with an admin panel for managing rooms, bookings, customers,
+              coupons, revenue cards, and payment logs using <strong>PHP</strong> and <strong>MySQL</strong>.
+            </p>
+            <p class="project-tags">PHP • MySQL • Admin Dashboard • CRUD</p>
+          </div>
 
-        <div class="card project-card">
-          <h3>Authentication & CSV-based Login</h3>
-          <p>
-            Implemented a login/registration system where user data is stored in CSV files.
-            On successful login, users are redirected to a protected form page.
-          </p>
-          <p class="project-tags">PHP • CSV • Sessions • Form Handling</p>
-        </div>
+          <div class="card project-card">
+            <h3>Authentication & CSV-based Login</h3>
+            <p>
+              Implemented a login/registration system where user data is stored in CSV files.
+              On successful login, users are redirected to a protected form page.
+            </p>
+            <p class="project-tags">PHP • CSV • Sessions • Form Handling</p>
+          </div>
 
-        <div class="card project-card">
-          <h3>Online Contact Form with Email</h3>
-          <p>
-            Backend project that processes contact form submissions and sends email notifications,
-            with validation and basic security measures.
-          </p>
-          <p class="project-tags">PHP • HTML • Email Handling</p>
+          <div class="card project-card">
+            <h3>Online Contact Form with Email</h3>
+            <p>
+              Backend project that processes contact form submissions and sends email notifications,
+              with validation and basic security measures.
+            </p>
+            <p class="project-tags">PHP • HTML • Email Handling</p>
+          </div>
         </div>
       </div>
 
-      <!-- IOT & ROBOTICS -->
-      <h2 class="section-subtitle-head">IoT & Robotics</h2>
-      <div class="grid-2 project-grid">
-        <div class="card project-card">
-          <h3>Smart Rover Robot (Project in Progress)</h3>
-          <p>
-            Built a rover using <strong>Raspberry Pi Model B</strong> and <strong>ESP32</strong>, capable
-            of remote control and integration with recognition systems for attendance tracking.
-          </p>
-          <p class="project-tags">Raspberry Pi • ESP32 • IoT • Robotics</p>
-        </div>
+      <!-- ================= IOT & ROBOTICS ================= -->
+      <div class="project-section">
+        <h2 class="section-subtitle-head">IoT & Robotics</h2>
+        <div class="grid-2 project-grid">
+          <div class="card project-card">
+            <h3>Smart Rover Robot (Project in Progress)</h3>
+            <p>
+              Built a rover using <strong>Raspberry Pi Model B</strong> and <strong>ESP32</strong>, capable
+              of remote control and integration with recognition systems for attendance tracking.
+            </p>
+            <p class="project-tags">Raspberry Pi • ESP32 • IoT • Robotics</p>
+          </div>
 
-        <div class="card project-card">
-          <h3>Face / ID Card Based Attendance System</h3>
-          <p>
-            System concept where student attendance is recorded automatically using face recognition
-            or ID card scanning, suitable for smart campus applications.
-          </p>
-          <p class="project-tags">Computer Vision • Automation • Attendance</p>
+          <div class="card project-card">
+            <h3>Face / ID Card Based Attendance System</h3>
+            <p>
+              System concept where student attendance is recorded automatically using face recognition
+              or ID card scanning, suitable for smart campus applications.
+            </p>
+            <p class="project-tags">Computer Vision • Automation • Attendance</p>
+          </div>
         </div>
       </div>
 
